<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/team_a_name_id"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/team_a_header"
                android:textSize="16sp"
                android:hint="@string/hint_a"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:textSize="40sp"
                tools:text="0"
                android:id="@+id/score_a"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_points_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/three_points"
                style="@style/pointBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_points_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:padding="15dp"
                style="@style/pointBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/free_throw_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:padding="15dp"
                style="@style/pointBtn"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/team_b_name_id"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/team_b_header"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/hint_b"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                tools:text="0"
                android:gravity="center"
                android:textSize="40sp"
                android:id="@+id/score_b"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_points_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:padding="15dp"
                style="@style/pointBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_points_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:padding="15dp"
                style="@style/pointBtn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/free_throw_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:padding="15dp"
                style="@style/pointBtn"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_margin="10dp"
            style="@style/resetBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="10dp"
            style="@style/resetBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:layout_margin="10dp"
            style="@style/resetBtn"/>
    </LinearLayout>

</LinearLayout>
